--- a/wifiController/app/src/main/res/layout/activity_main.xml
+++ b/wifiController/app/src/main/res/layout/activity_main.xml
@@ -1,32 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="1"
     tools:context="csc230.wificontroller.MainActivity">
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="25dp"
-        android:max="100"
+    <LinearLayout
+        android:layout_width="672dp"
+        android:layout_height="match_parent"
+        android:layout_weight="0.41"
+        android:orientation="vertical">
 
-        />
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="wrap_content"
+            android:layout_height="800dp"
+
+            android:foregroundGravity="bottom" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="50dp"
+            android:layout_height="20dp"
+            android:foregroundGravity="right" />
+
+    </LinearLayout>
 
     <Switch
-        android:text="Switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/switch1"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/brake"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="right" />
 
-</RelativeLayout>
+    <LinearLayout
+        android:id="@+id/textView"
+        android:layout_width="900dp"
+        android:layout_height="150dp"
+        android:layout_gravity="bottom"
+        android:layout_weight="0.41"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/stopDebug"
+            android:layout_width="850dp"
+            android:layout_height="15dp" />
+
+        <TextView
+            android:id="@+id/sDebug"
+            android:layout_width="850dp"
+            android:layout_height="15dp" />
+
+        <TextView
+            android:id="@+id/frDebug"
+            android:layout_width="850dp"
+            android:layout_height="15dp" />
+
+        <TextView
+            android:id="@+id/turnDebug"
+            android:layout_width="850dp"
+            android:layout_height="15dp" />
+
+
+    </LinearLayout>
+</LinearLayout>
